tests/integration/errors/test_struct_pointer_in_non_native.sn
# Error test: pointer field in non-native struct

struct Data =>
    ptr: *int

fn main(): void =>
    print("Should not compile\n")
